    
  upgrades:
    - moved "Kind" and "Target Runtime" from Assembly to Module handler
    - better support for pdb and mdb files and strong name assemblies
	- complete support for PE32+ assemblies
	- less memory consumption
	- lazy loading of every metadata element
	- speed and optimizations
	- you can enable/disable cache settings for intellisense 
	
  bugfixes:
    - fixed PointerType/ArrayType/ReferenceType Cecil/Reflector code matching 
	  (No data shown for methods with "ref" array parameters)
	- fixed crashes when attempting to replace all with code
	  (Could not find a part of the path)

////////////////////////////////////////////////////////////////////////////////
// v1.1 - ??/??/???? ///////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////////////

  news:
    - rename, delete or inject class/interface/struct/enum/event/field/method/
      constructor/property/assembly reference
    - smart injection : injecting a new property will generate a field, 
      getter/setter methods and IL code.
    - open architecture: Reflexil is now able to be used with Reflector,
      Cecil.Studio or anything able to convert an object model to Mono.Cecil
    - property editor (attributes, type, constant)
    - field editor (attributes, type, constant)
    - event editor (attributes, type)
    - assembly verifier (using peverify.exe from .NET SDK)
    
  upgrades:
    - interfaces and base type selection for type editor
    - Reflector/Mono.Cecil method matching

  bugfixes:
    - fixed framework version detection for Mono, initial patch by Robin Herbots
    - fixed constant handling with parameters
    - fixed InitLocals initialization for method bodies
    - fixed branch to self causes stack overflow, patch by Brien Sourceforge
    - fixed crash with unsupported assemblies
    - fixed grid refresh for method overrides 
    - fixed offset compute after code injection