@@ -17,12 +17,15 @@
 	- lazy loading of every metadata element
 	- speed and optimizations
 	- you can enable/disable cache settings for intellisense 
+	- injection/compilation with version control: v2.0, v3.5, v4.0
+	- new injection import process
 	
   bugfixes:
     - fixed PointerType/ArrayType/ReferenceType Cecil/Reflector code matching 
 	  (No data shown for methods with "ref" array parameters)
 	- fixed crashes when attempting to replace all with code
 	  (Could not find a part of the path)
+	- fixed type import when updating field, method, property or event
 
 ////////////////////////////////////////////////////////////////////////////////
 // v1.1 - ??/??/???? ///////////////////////////////////////////////////////////
